--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "mysql2": "^3.9.6",
+    "path": "^0.12.7",
     "sequelize": "^6.37.3"
   },
   "devDependencies": {
