--- a/.github/workflows/main_safeforest-ual.yml
+++ b/.github/workflows/main_safeforest-ual.yml
@@ -22,15 +22,15 @@ jobs:
     - name: Log in to registry
       uses: docker/login-action@v2
       with:
-        registry: https://mcr.microsoft.com/
-        username: ${{ secrets.AzureAppService_ContainerUsername_8b2e31d44c83470a85aa230a5124b39b }}
-        password: ${{ secrets.AzureAppService_ContainerPassword_74f8934d5e0047429cc7ce2c863a28c7 }}
+        registry: https://index.docker.io/v1/
+        username: ${{ secrets.AzureAppService_ContainerUsername_d2a59e2ccb8c44cc8a1cf123a8511591 }}
+        password: ${{ secrets.AzureAppService_ContainerPassword_8befe1f79d364045872016969a58a9a0 }}
 
     - name: Build and push container image to registry
       uses: docker/build-push-action@v3
       with:
         push: true
-        tags: mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_8b2e31d44c83470a85aa230a5124b39b }}/appsvc/node:${{ github.sha }}
+        tags: index.docker.io/${{ secrets.AzureAppService_ContainerUsername_d2a59e2ccb8c44cc8a1cf123a8511591 }}/appsvc/node:${{ github.sha }}
         file: ./Dockerfile
 
   deploy:
@@ -47,5 +47,5 @@ jobs:
       with:
         app-name: 'safeforest-ual'
         slot-name: 'production'
-        publish-profile: ${{ secrets.AzureAppService_PublishProfile_1f7185b3ce014692bbe73defe2938781 }}
-        images: 'mcr.microsoft.com/${{ secrets.AzureAppService_ContainerUsername_8b2e31d44c83470a85aa230a5124b39b }}/appsvc/node:${{ github.sha }}'
+        publish-profile: ${{ secrets.AzureAppService_PublishProfile_7c3cf711fe7f47928b047d2c4cfa3414 }}
+        images: 'index.docker.io/${{ secrets.AzureAppService_ContainerUsername_d2a59e2ccb8c44cc8a1cf123a8511591 }}/appsvc/node:${{ github.sha }}'
