--- a/.github/workflows/main_safeforest-ual.yml
+++ b/.github/workflows/main_safeforest-ual.yml
@@ -12,7 +12,7 @@ on:
 # 2. Change these variables for your configuration:
 env:
   AZURE_WEBAPP_NAME: safeforest-ual                    # set this to your application's name
-  AZURE_WEBAPP_PACKAGE_PATH: '/home/site/wwwroot'      # set this to the path to your web app project, defaults to the repository root
+  AZURE_WEBAPP_PACKAGE_PATH: '.'      # set this to the path to your web app project, defaults to the repository root
   NODE_VERSION: '16.x'                                 # set this to the node version to use
 
 jobs:
