--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "safe-forest-sas",
   "version": "1.0.0",
   "description": "Development of a SAS (Software As a Service) application for the detection of forest fires.",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
