--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "safe-forest-sas",
   "version": "1.0.0",
   "description": "Development of a SAS (Software As a Service) application for the detection of forest fires.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
