--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "test": "node_modules/.bin/jest",
+    "test": "sh node_modules/.bin/jest",
     "test:watch": "jest --watch"
   },
   "repository": {
