--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -35,6 +35,16 @@ jobs:
         with:
           name: node-app
           path: release.zip
+      
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3.x'
+      
+      - name: Install Python dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install flask
 
   deploy:
     runs-on: ubuntu-latest
