--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Install Python dependencies
         run: |
             python -m pip install --upgrade pip
-            pip install flask
+            pip install -r requirements.txt
 
   deploy:
     runs-on: ubuntu-latest
