--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -40,6 +40,11 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: '3.x'
+      
+      - name: Install Python dependencies
+        run: |
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
 
   deploy:
     runs-on: ubuntu-latest
