--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -36,6 +36,9 @@ jobs:
           name: node-app
           path: release.zip
       
+      - name: Install system dependencies
+        run: apt-get install -y python3-distutils
+
       - name: Set up Python
         uses: actions/setup-python@v2
         with:
@@ -43,8 +46,8 @@ jobs:
       
       - name: Install Python dependencies
         run: |
-            python -m pip install --upgrade pip
-            pip install -r requirements.txt
+            python3 -m pip3 install --upgrade pip3
+            pip3 install -r requirements.txt
 
   deploy:
     runs-on: ubuntu-latest
