--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -46,8 +46,8 @@ jobs:
       
       - name: Install Python dependencies
         run: |
-            python3 -m pip3 install --upgrade pip3
-            pip3 install -r requirements.txt
+            python -m pip install --upgrade pip
+            pip install -r requirements.txt
 
   deploy:
     runs-on: ubuntu-latest
