--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -44,7 +44,7 @@ jobs:
       - name: Ensure pip and distutils are available
         run: |
             python -m ensurepip --upgrade
-            python -m pip install --upgrade pip setuptools
+            python -m pip install --upgrade pip setuptools wheel
       
       - name: Install Python dependencies
         run: |
