--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -21,7 +21,7 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y ffmpeg
           sudo apt-get install -y python3-distutils python3-dev build-essential libopencv-dev
-          sudo apt-get install -y python3-PIL
+          sudo apt-get install -y python3-pillow
           sudo apt-get install -y python3-flask
           sudo apt-get install -y python3-numpy
           sudo apt-get install -y python3-opencv
