--- a/.github/workflows/main_safeforest-prod.yml
+++ b/.github/workflows/main_safeforest-prod.yml
@@ -74,6 +74,16 @@ jobs:
         with:
           name: node-app
 
+      - name: Install System Dependencies - Deploy
+        run: |
+            sudo apt-get update
+            sudo apt-get install -y ffmpeg
+            sudo apt-get install -y python3-distutils python3-dev build-essential libopencv-dev
+            sudo apt-get install -y python3-pillow
+            sudo apt-get install -y python3-flask
+            sudo apt-get install -y python3-numpy
+            sudo apt-get install -y python3-opencv
+
       - name: Unzip artifact for deployment
         run: unzip release.zip
 
